fixed nav width with header & applied correct scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -345,7 +345,6 @@ pre {
   display: flex;
   flex-direction: row;
   align-items: stretch;
-  padding-left: 5px;
   padding-right: 10px;
   margin-top: 5px;
   height: 26px;
@@ -354,11 +353,24 @@ pre {
 .header.darwin {
   margin-top: 3px;
 }
+
+.header .header-left {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  padding-left: 5px;
+  width: 120px; 
+}
+
 .header .header-right {
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-left: auto;
+}
+
+.header>button {
+  border: 1px solid yellow;
 }
 
 .header button {
@@ -418,7 +430,6 @@ pre {
 .header .search {
   display: flex;
   align-items: stretch;
-  margin-left: 15px;
 }
 
 .search .search-button {
@@ -460,7 +471,9 @@ pre {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  width: 140px;
+  min-width: 120px;
+  width: 120px;
+  max-width: 120px;
   padding-left: 5px;
   padding-top: 2px;
   color: #888;
@@ -484,7 +497,7 @@ pre {
 }
 
 .content>* {
-  width: calc(100vw - 140px + 14px);
+  width: calc(100vw - 120px - 15px);
 }
 
 .content .load-more {
@@ -702,7 +715,6 @@ pre {
 .song-view-comments {
   height: calc(100% - 20px);
   padding-bottom: 5px;
-  overflow-y: auto;
 }
 
 .song-view-main {
